--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
+*{
+  --primary-color:#00695C;
+  --primary-color-light:#00796B;
+  --primary-color-dark:#004D40;
+}
+
 .App {
   text-align: left;
   border: 0px;
   margin: 0px;
-  --primary-color:#00695C;
-  --primary-color-light:#00796B;
-  --primary-color-dark:#004D40;
+  height: 100%;
 }
