--- a/src/pages/signup/signup.css
+++ b/src/pages/signup/signup.css
@@ -60,3 +60,11 @@
     padding-left: 10px;
     color: teal;
 }
+
+.icon-container{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+    margin-top: 20px;
+}
