redesigned login and sign up screens

--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,28 +1,86 @@
-.root{
-    height: 100vh;
+.root {
+    height: 100%;
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
+    display: flex;
+    flex-direction: row;
 }
 
-.left-root{
+.left-root {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--primary-color);
+    height: 100%;
+    width: 50%;
+}
+
+.right-root {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100%;
+    width: 50%;
+    padding: 0px;
+    box-shadow: -3px 0px 10px #333;
 }
 
-.paper{
-    padding: 30px;
-    width: 60%;
+
+.box-for-content {
+    background-color: white;
+    border: 1px solid var(--primary-color);
+    border-radius: 5px;
+    overflow-y: scroll;
+    min-width: 80%;
+    max-width: 90%;
+    padding: 10px;
 }
 
-.signup-container{
+.paper-heading {
+    font-weight: 700;
+    color: var(--primary-color);
+    font-size: 35px;
+    margin-bottom: 10px;
+}
+
+.paper-subheading {
+    font-size: 10px;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    color: rgb(155, 155, 155);
+}
+
+@media screen and (max-width: 1045px) {
+
+    .root {
+        flex-direction: column;
+    }
+
+    .left-root {
+        max-height: 30%;
+        width: 100%;
+    }
+
+    .right-root {
+        height: 70%;
+        width: 100%;
+    }
+
+}
+
+
+
+.signup-container {
     display: flex;
     flex-direction: row;
     justify-content: end;
     margin-top: 20px;
 }
 
-.signup-text{
+.signup-text {
     margin-left: 5px;
     margin-right: 5px;
     font-weight: 700;
@@ -30,4 +88,18 @@
     text-decoration: none;
     color: teal;
     background-color: white;
+}
+
+.form-controller {
+    width: 100%;
+    padding-bottom: 10px;
+}
+
+.button-container {
+    padding: 15px;
+}
+
+.login-button {
+    width: 100%;
+    margin: 10px;
 }
