--- a/src/pages/signup/signup.css
+++ b/src/pages/signup/signup.css
@@ -34,7 +34,8 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 30px;
+    justify-content: center;
+    align-items: flex-start;;
 }
 
 .user-image{
